--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,4 +1,24 @@
-.header {
+#header-box {
+  width: 100%;
+  height: 100px;
+  border-bottom: 1px solid;
+  text-align: left;
+  border-color: lightgray;
+}
+
+#header-title {
+  font-size: 50px;
+  margin-left: 100px;
+  font-weight: 500;
+}
+
+#header-title-span {
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+
+/* .header {
   display: flex;
   flex-direction: row;
   align-items: baseline;
@@ -19,4 +39,6 @@
   border: 0px;
   height: 2px;
   background-color: black;
-}
+} */
+
+
