--- a/src/Pages/Projectpage/Projectpage.css
+++ b/src/Pages/Projectpage/Projectpage.css
@@ -4,11 +4,21 @@
 
 .projectmenuContainer {
   float: left;
-  width: 25%;
+  width: 23%;
+  /* border-bottom: 1px solid lightgray; */
 }
 
 .timelineContainer {
   float: left;
-  width: 70%;
-  margin-left: 2.5%;
+  width: 77%;
+}
+
+#closeBtn {
+  font-size: 25px;
+  position: relative;
+  top: -80px;
+  float: right;
+  width: 100px;
+  border-width: 0px;
+  background-color: white;
 }
