--- a/src/Components/Calendar/Calendar.css
+++ b/src/Components/Calendar/Calendar.css
@@ -249,7 +249,7 @@ header {
   position: absolute;
   /* left: 345px;
   top: 975px; */
-  background-color: red;
+  background-color: lightgray;
   width: 157px;
   height : 30px;
   font-size: 20px;
