--- a/src/Components/Calendar/Calendar.css
+++ b/src/Components/Calendar/Calendar.css
@@ -17,11 +17,16 @@ header {
 }
 
 #calendar-add {
-  font-size: 40px;
-  border: 2px solid gray;
+  font-size: 30px;
+  padding: 10px;
+  padding-left: 10px;
+  background-color: rgb(243, 243, 243);
+  border: none;
   float: left;
   border-radius: 10px;
   cursor: pointer;
+  box-shadow: rgb(173, 173, 173) 0px 2px 5px;
+
 }
 
 #calendar-changemonth button{
@@ -122,7 +127,10 @@ header {
   width: 320px;
   height: 570px;
   background-color: white;
-  border: 1px solid black;
+  border: none;
+  box-shadow: rgb(173, 173, 173) 0px 3px 8px;
+  border-radius: 8px;
+  
 }
 
 #popup-component {
@@ -140,46 +148,60 @@ header {
 
 #popup-header-text {
   font-size: 30px;
+  color:rgb(66, 66, 66);
 }
 
 
 #popup-title {
+  
   display: block;
   margin: auto;
   top: 20px;
   width: 270px;
   height: 40px;
   cursor: text;
-  border: 1px solid black;
+  background-color:rgb(255, 255, 255); 
+  border-top:rgb(182, 182, 182);
+  border-left:rgb(182, 182, 182);
+  border-right:rgb(182, 182, 182);
+  border-color:rgb(133, 133, 133);
+  border-width: 2px;
+  /* border: none; */
+  /* border-radius: 5px; */
   font-size: 15px;
   margin-bottom: 30px;
 }
 
 
 .popup-button {
+  color:rgb(66, 66, 66);
   width: 60px;
   height: 30px;
   font-size: 15px;
   text-align: center;
   border: none;
-  border-radius: 50px;
+  border-radius: 20px;
   cursor: pointer;
   margin-bottom: 20px;
 }
 
 #popup-button-close{
+  font-size: 30px;
+  color:rgb(95, 95, 95);
   float: right;
   left: 270px;
   top: 10px;
   width: 25px;
   height: 25px;
-  border-radius: 10px;
-  margin-top: 10px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  margin-top: -2px;
   margin-bottom: 0px;
   align-self: right;
 }
 
 #popup-button-work {
+  color:rgb(66, 66, 66);
   margin-left: 10px;
   margin-right: 14px;
 }
@@ -189,6 +211,7 @@ header {
 }
 
 #popup-button-family {
+  color:rgb(66, 66, 66);
   margin-right: 14px;
 }
 
@@ -197,6 +220,7 @@ header {
 }
 
 #popup-button-private {
+  color:rgb(66, 66, 66);
   margin-right: 14px;
 }
 
@@ -229,8 +253,10 @@ header {
   width: 270px;
   height: 200px;
   font-size: 15px;
-  border: 1px solid black;
+  border: none;
+  background-color:rgb(248, 248, 248);
   margin-bottom: 30px;
+  box-shadow: rgb(173, 173, 173) 1px 1px 3px;
 }
 
 
@@ -238,7 +264,8 @@ header {
   position: absolute;
   left: 240px;
   top: 520px;
-  background-color: gray;
+  color: white;
+  background-color: rgb(163, 163, 163);
 }
 
 #schedules-wrap {
@@ -253,11 +280,13 @@ header {
   height : 30px;
   font-size: 17px;
   border-radius: 10px;
+
 }
 
 .schedule-text {
   margin-top: 4px;
   margin-left: 5px;
+ 
 }
 
 .family {
