--- a/src/Components/Calendar/PopupBox/PopupBox.css
+++ b/src/Components/Calendar/PopupBox/PopupBox.css
@@ -1,5 +1,12 @@
   
-.popupBox {
+.popupBox0 {
+  background-color: white;
+  width: 500px;
+  height: 250px;
+  border-radius: 15px;
+}
+
+.popupBox1 {
   background-color: white;
   width: 500px;
   height: 250px;
@@ -31,9 +38,14 @@
   margin-left: 25px;
   margin-top: 10px;
   margin-bottom: 10px;
-  
+
 }
 
 .popupText-where {
   display: inline;
+}
+
+#passBtn2-1 {
+  z-index: 20;
+  bottom: 290px;
 }
