--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,18 +3,19 @@
   height: 100px;
   border-bottom: 1px solid;
   text-align: left;
-  border-color: lightgray;
+  border-color: rgb(214, 193, 193);
 }
 
 #header-title {
-  font-size: 50px;
+  font-size: 55px;
   margin-left: 100px;
-  font-weight: 500;
+ 
 }
 
 #header-title-span {
   font-size: 20px;
   margin-left: 10px;
+  font-weight: 500;
 }
 
 
