--- a/src/Components/Projectmenu/Modal/index.css
+++ b/src/Components/Projectmenu/Modal/index.css
@@ -81,3 +81,17 @@
         opacity: 1;
     }
 }
+
+#Projectname{
+    width: 100%
+
+}
+
+#Duration{
+    width: 100%
+
+}
+
+#Description{
+    width: 100% 
+}
