태스크 3 깨진거 수정

--- a/src/Pages/Projectpage/Projectpage.css
+++ b/src/Pages/Projectpage/Projectpage.css
@@ -1,6 +1,6 @@
-.headerContainer {
+/* .headerContainer {
   border-bottom: 1px solid lightgray;
-}
+} */
 
 .projectmenuContainer {
   float: left;
