--- a/src/Components/Calendar/PopupBox/SendPopup.css
+++ b/src/Components/Calendar/PopupBox/SendPopup.css
@@ -23,8 +23,10 @@
 }
 
 .close {
+  position: relative;
   font-size: 20px;
   margin-top: 50px;
   margin-left: 370px;
   cursor: pointer;
+  z-index: 1000;
 }
