--- a/src/Components/Calendar/Calendar.css
+++ b/src/Components/Calendar/Calendar.css
@@ -286,14 +286,11 @@ header {
   background-color: lightgray;
   height : 30px;
   font-size: 17px;
-  border-radius: 10px;
 
 }
 
 .schedule-text {
-  margin-top: 4px;
   margin-left: 5px;
- 
 }
 
 .family {
@@ -321,7 +318,7 @@ header {
   left: 0%;
 }
 .col1 {
-  left: 14.3%;
+  left: 14.2%;
 }
 .col2 {
   left: 28.6%;
@@ -358,8 +355,20 @@ header {
   top: 930px;
 }
 
-.length-1 {
+.schedule-normal {
+  width: 14.4%;
+}
+.schedule-last {
   width: 14.2%;
+  display: flex;
+  flex-direction: row-reverse;
+  align-content: center;
+}
+.schedule-firstlast {
+  width: 14.3%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 .length-2 {
   width: 28.3%;
