--- a/src/Components/Calendar/Calendar.css
+++ b/src/Components/Calendar/Calendar.css
@@ -363,12 +363,14 @@ header {
   display: flex;
   flex-direction: row-reverse;
   align-content: center;
+  border-radius: 0px  15px 15px 0px; 
 }
 .schedule-firstlast {
   width: 14.3%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  border-radius: 0px 15px 15px 0px;
 }
 .length-2 {
   width: 28.3%;
