--- a/src/Components/Categorybox/Categorybox.css
+++ b/src/Components/Categorybox/Categorybox.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   /* max-width: 1200px; */
   /* height: 50vh; */
-  filter: drop-shadow(2px 4px 4px #5555);
+  /* filter: drop-shadow(2px 4px 4px #5555); */
   overflow: hidden;
   
   margin-top: 20px;
@@ -43,7 +43,6 @@
 
 
   background-color: rgb(255, 255, 255);
-
   padding: 15px;
 }
 
