--- a/src/Components/Message/Messenger.css
+++ b/src/Components/Message/Messenger.css
@@ -132,6 +132,119 @@
 .message-row5 {
   top: 960px;
 }
+
+.message-row0-1 {
+  top: 80px;
+}
+.message-row0-2 {
+  top: 110px;
+}
+.message-row0-3 {
+  top: 140px;
+}
+.message-row0-4 {
+  top: 170px;
+}
+.message-row0-5 {
+  top: 200px;
+}
+
+.message-row1-1 {
+  top: 240px;
+}
+.message-row1-2 {
+  top: 270px;
+}
+.message-row1-3 {
+  top: 300px;
+}
+.message-row1-4 {
+  top: 330px;
+}
+.message-row1-5 {
+  top: 360px;
+}
+.message-row1-6 {
+  top: 390px;
+}
+
+.message-row2-1 {
+  top: 420px;
+}
+.message-row2-2 {
+  top: 450px;
+}
+.message-row2-3 {
+  top: 480px;
+}
+.message-row2-4 {
+  top: 510px;
+}
+.message-row2-5 {
+  top: 540px;
+}
+.message-row2-6 {
+  top: 570px;
+}
+
+.message-row3-1 {
+  top: 600px;
+}
+.message-row3-2 {
+  top: 630px;
+}
+.message-row3-3 {
+  top: 660px;
+}
+.message-row3-4 {
+  top: 690px;
+}
+.message-row3-5 {
+  top: 720px;
+}
+.message-row3-6 {
+  top: 750px;
+}
+
+.message-row4-1 {
+  top: 780px;
+}
+.message-row4-2 {
+  top: 810px;
+}
+.message-row4-3 {
+  top: 840px;
+}
+.message-row4-4 {
+  top: 870px;
+}
+.message-row4-5 {
+  top: 900px;
+}
+.message-row4-6 {
+  top: 930px;
+}
+
+.message-row5-1 {
+  top: 960px;
+}
+.message-row5-2 {
+  top: 990px;
+}
+.message-row5-3 {
+  top: 1020px;
+}
+.message-row5-4 {
+  top: 1050px;
+}
+.message-row5-5 {
+  top: 1080px;
+}
+.message-row5-6 {
+  top: 1110px;
+}
+
+
 .message-col0 {
   left: 0%;
 }
