revise ProjectManager to PriorityManager

--- a/src/Components/Timeline/Projectmenu/Projectmenu.css
+++ b/src/Components/Timeline/Projectmenu/Projectmenu.css
@@ -1,9 +1,9 @@
 .projectMenu {
-  height: 550px;
+  /* height: 550px; */
 }
 
 .projectHeaderText {
-  font-size: 28px;
+  font-size: 26px;
   margin-left: 30px;
 }
 
