--- a/src/Components/Timeline/Projectmenu/Projectmenu.css
+++ b/src/Components/Timeline/Projectmenu/Projectmenu.css
@@ -1,20 +1,22 @@
 .projectMenu {
-  /* height: 550px; */
+  height: 550px;
+  /* border-right-color: gray;
+  border-right-width: 5px; */
 }
 
 .projectHeaderText {
-  font-size: 26px;
+  font-size: 28px;
   margin-left: 30px;
 }
 
-.projectAddBtn {
+/* .projectAddBtn {
   font-size: 24px;
   border: 2px solid gray;
   float: right;
   border-radius: 10px;
   padding-left: 10px;
   padding-right: 10px;
-}
+} */
 
 .projectmenu-category {
   text-align: center;
@@ -23,6 +25,8 @@
   height: 100px;
   line-height: 100px;
   font-size: 24px;
+  /* border-right-color: gray;
+  border-width: 1px; */
 }
 
 #project1 {
@@ -40,7 +44,7 @@
 #project4 {
   background-color: #e5fff9;
 }
-
+/* 
 .doneprojectBtn {
   position: fixed;
   width: 160px;
@@ -49,4 +53,84 @@
   border: 2px solid gray;
   border-radius: 10px;
   justify-content: center;
+} */
+
+.flexbox {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  align-content: column;
+  flex-direction: column;
+  /* box-sizing: content-box; */
+  /* align-items: stretch; */
+  /* max-width: 1200px; */
+  height: 650px;
+  /* filter: drop-shadow(2px 4px 4px #5555); */
+  overflow: scroll;
+  margin-top: 0px;
+  /* margin: 100 auto; */
+  padding-top: 10 px;
+  padding: 10 px;
+  background-color: rgb(241, 241, 241);
+}
+
+.flexbox .board {
+  display: flex;
+  flex-direction: column;
+  align-items: 'center';
+  box-sizing: content-box;
+  margin: 10px 10px 10px 10px;
+  margin-top: auto;
+  border-radius: 0px;
+  /* border: none; */
+
+  width: rem;
+  background-color: rgb(255, 255, 255);
+  padding: 15px;
+}
+
+.label {
+  align-items: center;
+  font-weight: bold;
+}
+
+.card-family {
+  padding: 15px 25px;
+  /* margin-left: 10%; */
+  box-sizing: content-box;
+  margin-right: 3%;
+  width: rem;
+  background-color:rgb(224, 255, 255);
+  border-style: hidden;
+  /* border-radius: 7px; */
+  cursor: pointer;
+  margin-bottom: 15px;
+
+}
+
+.card-private {
+  padding: 15px 25px;
+  box-sizing: content-box;
+  width: rem;
+  /* margin-left: 10%; */
+  margin-right: 3%;
+  background-color:rgb(255, 230, 255);
+  border-style: hidden;
+  /* border-radius: 7px; */
+  cursor: pointer;
+  margin-bottom: 15px;
+
+}
+.card-work {
+  padding: 15px 25px;
+  box-sizing: content-box;
+  /* margin-left: 10%; */
+  margin-right: 3%;
+  width: rem;
+  background-color:rgb(252, 255, 224);
+  border-style: hidden;
+  /* border-radius: 7px; */
+  cursor: pointer;
+  margin-bottom: 15px;
+
 }
