--- a/src/Components/Projectmenu/ProjectBox/index.css
+++ b/src/Components/Projectmenu/ProjectBox/index.css
@@ -5,6 +5,8 @@
     height: 100px;
     line-height: 100px;
     font-size: 24px;
+    color: inherit;
+    text-decoration: none;
   }
   
   #project {
