--- a/src/Components/Subtask/SubModal/index.css
+++ b/src/Components/Subtask/SubModal/index.css
@@ -1,4 +1,4 @@
-/* .modal {
+.modal {
     display: none;
     position: fixed;
     top: 0;
@@ -6,7 +6,7 @@
     bottom: 0;
     left: 0;
     z-index: 99;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: #00000099;
 }
 .modal button {
     outline: none;
@@ -78,4 +78,4 @@
     to {
         opacity: 1;
     }
-} */
+}
