--- a/src/Components/Calendar/Calendar.css
+++ b/src/Components/Calendar/Calendar.css
@@ -6,36 +6,61 @@ header {
   text-align: center;
 }
 
+@font-face {
+  font-family: '나눔고딕';
+  src: url(../../Font/NanumGothicCoding-Bold.ttf);
+}
+@font-face {
+  font-family: "Questrial";
+  src: url(../../Font/Questrial-Regular.ttf);
+}
+
 #calendar-box {
   width: 100%;  
 }
 
-
 #header-wrap {
   padding-top: 20px;
   padding-bottom: 20px;
+  margin-left: -100px;
+}
+
+#calendar{
+  margin-left: -100px;
 }
 
 #calendar-add {
-  font-size: 30px;
-  padding: 10px;
-  padding-left: 10px;
-  background-color: rgb(243, 243, 243);
-  border: none;
+  font-size: 17px;
+  /* background-color: rgb(243, 243, 243); */
+  /* border: none; */
   float: left;
-  border-radius: 10px;
+  /* border-radius: 10px; */
+  margin-top: 5px;
   cursor: pointer;
-  box-shadow: rgb(173, 173, 173) 0px 2px 5px;
-
+  /* box-shadow: rgb(173, 173, 173) 0px 2px 5px; */
 }
 
-#calendar-changemonth button{
-  margin-top: 10px;
-  font-size: 30px;
-  border: 2px solid;
+#calendar-nextmonth{
+  margin-top: 5px;
+  font-size: 17px;
+  font-family: 나눔고딕;
+  font-weight: bolder;
+  /* border: 2px solid; */
   float: right;
   margin-right: 10px;
-  border: none;
+  /* border: none; */
+  cursor: pointer;
+}
+
+#calendar-prevmonth{
+  margin-top: 5px;
+  font-size: 17px;
+  font-family: 나눔고딕;
+  font-weight: bolder;
+  /* border: 2px solid; */
+  float: right;
+  margin-right: 10px;
+  /* border: none; */
   cursor: pointer;
 }
 
@@ -45,7 +70,10 @@ header {
 
 #calendar-monthyear {
   height: 60px;
+  margin-top: -5px;
   font-size: 40px;
+  font-family: Questrial;
+  font-weight: bolder;
   text-align: center;
 }
 
