--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -10,22 +10,27 @@
   font-family: "Promp-Mid";
   src: url(../../Font/Prompt-Light.ttf);
 }
+@font-face {
+  font-family: "Rajdhani";
+  src: url(../../Font/Rajdhani-SemiBold.ttf);
+}
 
 .header-box {
   width: 100%;
   height: 60px;
   text-align: left;
   border-color: rgb(214, 193, 193);
-  margin-bottom: 25px;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .header-title {
-  margin-top: 0px;
-  margin-left: 40px;
+  margin-left: 35px;
+  padding-top: 2.5px;
 }
 
 #header-title-colic {
-  font-family: Promp-Mid;
+  font-family: Rajdhani;
   cursor: pointer;
   font-size: 60px;
   font-weight: bolder;
@@ -34,6 +39,7 @@
 
 #header-title-span {
   font-family: Promp-Thin;
+  font-weight: 600;
   font-size: 15px;
   margin-left: 10px;
   color: black;
