--- a/src/Components/Menubar/Menubar.css
+++ b/src/Components/Menubar/Menubar.css
@@ -1,23 +1,44 @@
+@font-face {
+  font-family: "Abel";
+  src: url(../../Font/Abel-Regular.ttf);
+}
+@font-face {
+  font-family: "Promp-Thin";
+  src: url(../../Font/Prompt-ThinItalic.ttf);
+}
+@font-face {
+  font-family: "Promp-Mid";
+  src: url(../../Font/Prompt-Light.ttf);
+}
+@font-face {
+  font-family: "Questrial";
+  src: url(../../Font/Questrial-Regular.ttf);
+}
+
 .mainbox-sidemenu {
   display: flex;
   flex-direction: column;
-  height: 1170px; 
+  height: 1170px;
+  width: 200px;
   padding-right: 20px;
   border-right: 1px solid lightgray;
 
 }
 
 .mainbox-sidemenu-left-text {
-  margin-left: 40px;
-  margin-bottom: 30px;
+  margin-left: 20px;
+  margin-top: 18px;
+  margin-bottom: 20px;
   font-size: 20px;
+  font-family: Abel;
 }
 
 .sidemenu-category {
   display: flex;
   align-items: center;
-  height: 20px;
-  font-size: 20px;
+  height: 50px;
+  font-size: 18px;
+  font-family: Promp-Mid;
   padding-top: 15px;
   padding-bottom: 20px;
   padding-left: 40px;
@@ -28,14 +49,26 @@
   flex-basis: 30%;
 }
 
-#category-project {
-  text-align: center;
-  margin-left: 40px; 
-  flex-basis: 50px;
+.sidemenu-category-img {
+  padding-left: 10px;
 }
 
+#category-project {
+  text-align: center;
+  margin-top: 20px;
+  margin-left: 20px; 
+  flex-basis: 50px;
+  background-color: white;
+}
+
+.default-link{
+  font-family: Questrial;
+  font-size: 18px;
+  font-weight: 500;
+}
 
 .sidemenu-left-border {
+  margin-top: 20px;
   margin-left: 30px;
   border-bottom: 2px solid lightgray;
 }
