--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -22,6 +22,7 @@
   border-color: rgb(214, 193, 193);
   margin-top: 10px;
   margin-bottom: 20px;
+  background-color: transparent;
 }
 
 .header-title {
