--- a/src/Components/Calendar/Calendar.css
+++ b/src/Components/Calendar/Calendar.css
@@ -10,33 +10,63 @@ header {
   width: 100%;  
 }
 
-
 #header-wrap {
   padding-top: 20px;
   padding-bottom: 20px;
+  display: flex;
+  align-items: center;
 }
 
-#calendar-add {
-  font-size: 30px;
-  padding: 10px;
-  padding-left: 10px;
-  background-color: rgb(243, 243, 243);
+
+#calendar-add-button {
   border: none;
-  float: left;
-  border-radius: 10px;
+  width: 25%;
+  height: 50px;
+  font-size: 30px;
+  background-color: rgb(243, 243, 243);
+  border-radius: 5px;
   cursor: pointer;
   box-shadow: rgb(173, 173, 173) 0px 2px 5px;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#calendar-add-wrap {
+  flex-basis: 35%;
+  display: flex;
+  align-items: center;
+}
+
+#calendar-add-text {
+  margin-left: 5%;
+}
+
+#calendar-add-text p{
+  font-size: 15px;
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+}
+
+#calendar-monthyear {
+  flex-basis: 30%;
+}
+
+#calendar-changemonth {
+  flex-basis : 35%;
+  display : flex;
+  justify-content: flex-end;
 }
 
 #calendar-changemonth button{
   margin-top: 10px;
   font-size: 30px;
   border: 2px solid;
-  float: right;
   margin-right: 10px;
   border: none;
   cursor: pointer;
+
 }
 
 #calendar-add-plus {
