--- a/src/Components/Menubar/Menubar.css
+++ b/src/Components/Menubar/Menubar.css
@@ -1,7 +1,7 @@
 .mainbox-sidemenu {
   display: flex;
   flex-direction: column;
-  height: 1170px; 
+  height: 1400px; 
   padding-right: 20px;
   border-right: 1px solid lightgray;
 
@@ -64,18 +64,18 @@
   flex-direction: column;
 }
 
-.category-help-1 {
-  font-size: 20px;
-  flex-basis:50px;
-  margin-bottom: 20px;
-}
-.category-help-2 {
-  font-size: 20px;
-  flex-basis: 50px;
-}
-
 .stress {
   font-weight: bolder;
   font-size: 24px;
   color: skyblue;
 }
+
+#notification-box {
+  margin-left: 10%;
+}
+
+#notifications {
+  font-size: 18px;
+  margin-left: 20px;
+}
+
