--- a/src/Pages/Mainpage/Mainpage.css
+++ b/src/Pages/Mainpage/Mainpage.css
@@ -21,10 +21,9 @@
   border: none;
   text-align: center;
   background-color: #ffffb0;
-  
 }
 
-#send {
+/* #send {
   position: fixed;
   background-color: lightblue;
   border-radius: 15px;
@@ -40,4 +39,4 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
