--- a/src/Components/Timeline/Timeline.css
+++ b/src/Components/Timeline/Timeline.css
@@ -103,15 +103,15 @@
 }
 
 .workschedule:hover {
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 .familyschedule:hover {
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 .privateschedule:hover {
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 #sch1 {
@@ -170,7 +170,7 @@
 
 #sch10 {
   position: relative;
-  left: 335px;
+  left: 495px;
   top: -820px;
 }
 
@@ -224,8 +224,62 @@
 
 #sch19 {
   position: relative;
-  left: 335px;
+  left: 170px;
   top: -1270px;
+}
+
+#sch20 {
+  position: relative;
+  left: 655px;
+  top: -1040px;
+}
+
+#holiday {
+  color: red;
+}
+
+#popupsch1 {
+  display: none;
+  position: absolute;
+  top: 460px;
+  left: 10px;
+}
+
+#popupsch4 {
+  display: none;
+  position: absolute;
+  top: 460px;
+  left: 335px;
+}
+
+#popupsch10 {
+  display: none;
+  position: absolute;
+  top: 335px;
+  left: 495px;
+}
+
+#popupsch2,
+#popupsch3,
+#popupsch4,
+#popupsch5,
+#popupsch6,
+#popupsch7,
+#popupsch8,
+#popupsch9,
+#popupsch10,
+#popupsch11,
+#popupsch12,
+#popupsch13,
+#popupsch14,
+#popupsch15,
+#popupsch16,
+#popupsch17,
+#popupsch18,
+#popupsch19,
+#popupsch20 {
+  /* display: none; */
+  display: none;
 }
 
 /* #project1_1 {
