--- a/src/Components/Menubar/Menubar.css
+++ b/src/Components/Menubar/Menubar.css
@@ -128,16 +128,17 @@
 
 #send-wrap {
   position: absolute;
-  left: 320px;
-  top: 540px;
+  left: 280px;
+  top: 520px;
   width: 420px;
-  background-color: #c8f7f4;
+  background-color: white;
   border-radius: 15px;
+  font-family: abel;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
-
+  box-shadow: rgb(173, 173, 173) 1px 3px 3px;
   z-index: 100;
   
 }
@@ -156,6 +157,10 @@
   margin-bottom: 20px;
 }
 
+#send-selection-schedule {
+  width: 60%;
+}
+
 .send-body-message-wrap {
   flex-basis: 30px;
   margin-left: 5%;
@@ -169,18 +174,36 @@
   justify-content: flex-end;
   margin-bottom: 20px;
 }
+.send-body-header-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  margin-bottom: 20px;
+}
+
+.send-header-text {
+  margin-top: 2%;
+  font-size: 30px;
+  margin-left: 5%;
+}
 
 #sendContext {
   width: 95%;
   height: 60px;
   resize: none;
   border-radius: 15px;
+  border: none;
+  background-color: #f0f0f0;
 
 }
 
 .send-body-subject {
   font-weight: bold;
-  flex-basis: 100px;
+  flex-basis: 20%;
+}
+.send-body-pass-subject {
+  font-weight: bold;
+  flex-basis: 20%;
 }
 
 .send-body-message-text {
@@ -190,11 +213,13 @@
 
 #send-button-close {
   width: 30px;
-  height: 30px;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
   margin-right: 5%;
-  margin-top: 20px;
+  margin-top: 2%;
+  background-color: transparent;
   border: none;
   cursor:pointer;
 }
@@ -203,14 +228,8 @@
   font-size: 15px;
   margin-right: 5%;
   border: none;
-  width : 60px;
-  height: 30px;
   border-radius: 10px;
   text-align: center;
   cursor: pointer;
 }
 
-.send-body-pass-subject {
-  font-weight: bold;
-  flex-basis: 100px;
-}
