--- a/src/Components/Timeline/Timeline.css
+++ b/src/Components/Timeline/Timeline.css
@@ -3,6 +3,7 @@
   width: 21%;
   overflow-y: scroll;
   overflow-x: hidden;
+  font-family : abel;
   /* border-bottom: 1px solid lightgray; */
 }
 
